LibVlcSharp/Generated/libvlc_media_player.cs


        public global::VideoLAN.LibVLC.Generated.AudioOutputDevice PNext
        {
            get
            {
                global::VideoLAN.LibVLC.Generated.AudioOutputDevice __result0;
                if (((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->p_next == IntPtr.Zero) __result0 = null;
                else if (global::VideoLAN.LibVLC.Generated.AudioOutputDevice.NativeToManagedMap.ContainsKey(((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->p_next))
                    __result0 = (global::VideoLAN.LibVLC.Generated.AudioOutputDevice) global::VideoLAN.LibVLC.Generated.AudioOutputDevice.NativeToManagedMap[((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->p_next];
                else __result0 = global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__CreateInstance(((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->p_next);
                return __result0;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->p_next = ReferenceEquals(value, null) ? global::System.IntPtr.Zero : value.__Instance;
            }
        }

        public sbyte* PszDevice
        {
            get
            {
                return (sbyte*) ((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->psz_device;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->psz_device = (global::System.IntPtr) value;
            }
        }

        public sbyte* PszDescription
        {
            get
            {
                return (sbyte*) ((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->psz_description;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.AudioOutputDevice.__Internal*) __Instance)->psz_description = (global::System.IntPtr) value;
            }
        }
    }

    /// <summary>Viewpoint for video outputs</summary>
    /// <remarks>allocate using libvlc_video_new_viewpoint()</remarks>
    public unsafe partial class VideoViewpoint : IDisposable
    {
        [StructLayout(LayoutKind.Explicit, Size = 16)]
        public partial struct __Internal
        {
            [FieldOffset(0)]
            internal float f_yaw;

            [FieldOffset(4)]
            internal float f_pitch;

            [FieldOffset(8)]
            internal float f_roll;

            [FieldOffset(12)]
            internal float f_field_of_view;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0libvlc_video_viewpoint_t@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::VideoLAN.LibVLC.Generated.VideoViewpoint> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::VideoLAN.LibVLC.Generated.VideoViewpoint>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::VideoLAN.LibVLC.Generated.VideoViewpoint __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::VideoLAN.LibVLC.Generated.VideoViewpoint(native.ToPointer(), skipVTables);
        }

        internal static global::VideoLAN.LibVLC.Generated.VideoViewpoint __CreateInstance(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal native, bool skipVTables = false)
        {
            return new global::VideoLAN.LibVLC.Generated.VideoViewpoint(native, skipVTables);
        }

        private static void* __CopyValue(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal));
            *(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private VideoViewpoint(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected VideoViewpoint(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }

        public VideoViewpoint()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        public VideoViewpoint(global::VideoLAN.LibVLC.Generated.VideoViewpoint _0)
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
            *((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance) = *((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) _0.__Instance);
        }

        public void Dispose()
        {
            Dispose(disposing: true);
        }

        public virtual void Dispose(bool disposing)
        {
            if (__Instance == IntPtr.Zero)
                return;
            global::VideoLAN.LibVLC.Generated.VideoViewpoint __dummy;
            NativeToManagedMap.TryRemove(__Instance, out __dummy);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
            __Instance = IntPtr.Zero;
        }

        public float FYaw
        {
            get
            {
                return ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_yaw;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_yaw = value;
            }
        }

        public float FPitch
        {
            get
            {
                return ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_pitch;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_pitch = value;
            }
        }

        public float FRoll
        {
            get
            {
                return ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_roll;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_roll = value;
            }
        }

        public float FFieldOfView
        {
            get
            {
                return ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_field_of_view;
            }

            set
            {
                ((global::VideoLAN.LibVLC.Generated.VideoViewpoint.__Internal*) __Instance)->f_field_of_view = value;
            }
        }
    }

    public unsafe partial class libvlc_media_player
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_new")]
            internal static extern global::System.IntPtr LibvlcMediaPlayerNew(global::System.IntPtr p_libvlc_instance);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_new_from_media")]
            internal static extern global::System.IntPtr LibvlcMediaPlayerNewFromMedia(global::System.IntPtr p_md);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_release")]
            internal static extern void LibvlcMediaPlayerRelease(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_retain")]
            internal static extern void LibvlcMediaPlayerRetain(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_set_media")]
            internal static extern void LibvlcMediaPlayerSetMedia(global::System.IntPtr p_mi, global::System.IntPtr p_md);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_get_media")]
            internal static extern global::System.IntPtr LibvlcMediaPlayerGetMedia(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_event_manager")]
            internal static extern global::System.IntPtr LibvlcMediaPlayerEventManager(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_is_playing")]
            internal static extern int LibvlcMediaPlayerIsPlaying(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_play")]
            internal static extern int LibvlcMediaPlayerPlay(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_set_pause")]
            internal static extern void LibvlcMediaPlayerSetPause(global::System.IntPtr mp, int do_pause);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_pause")]
            internal static extern void LibvlcMediaPlayerPause(global::System.IntPtr p_mi);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_media_player_stop")]
            internal static extern void LibvlcMediaPlayerStop(global::System.IntPtr p_mi);
